// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createUser Should create a user with firstname and lastname only 1`] = `
{
  "email": "",
  "firstName": "D",
  "lastName": "Surname",
  "password": "password",
  "phone": "",
  "type": "USER",
}
`;

exports[`createUser Should create a user with firstname, lastname and phone 1`] = `
{
  "email": "",
  "firstName": "D",
  "lastName": "Surname",
  "password": "password",
  "phone": "123-123-123",
  "type": "USER",
}
`;

exports[`createUser Should create a user with firstname,lastname, phone and email 1`] = `
{
  "email": "mail@mail.com",
  "firstName": "D",
  "lastName": "Surname",
  "password": "password",
  "phone": "123-123-123",
  "type": "USER",
}
`;
